# diskometer

./: Makefile  README.md  meter.py  pyproject.toml
diskometer/: __main__.py
